go back Button Added

--- a/india.html
+++ b/india.html
@@ -49,6 +49,10 @@
         <li>HARDIK PANDYA</li>
 
        </ol>
+       <br>
+       <hr>
+       <a
+       href="index.html">GO BLACK</a>
     
 </body>
 </html>
