line change of go back

--- a/india.html
+++ b/india.html
@@ -51,8 +51,7 @@
        </ol>
        <br>
        <hr>
-       <a
-       href="index.html">GO BLACK</a>
+       <a href="index.html">GO BLACK</a>
     
 </body>
 </html>
