--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </p>
         <hr>
 
-        <img src="https://images.pexels.com/photos/3718433/pexels-photo-3718433.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Image of Cricket" width="500">
+        <img src="https://images.pexels.com/photos/3718433/pexels-photo-3718433.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Image of Cricket" width="500"> &nbsp; 
         <img src="https://i.pinimg.com/736x/cc/0c/b3/cc0cb389b89c825c85c273d12a8a6fcd.jpg" width="500">
         <hr>
         <h2>Countries Playing Cricket</h2>
