--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRICKET</title>
 </head>
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
 <body>
     <h1>CRICKET</h1>
     <hr>
